<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout tools:context=".Firebase_Registrar$Register"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintVertical_bias="0.111"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="30sp" android:textAlignment="center"
        android:text="@string/Title_creUser_criar_perfil"
        android:id="@+id/txt_crair_conta"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/edTxt_cNome"
        app:layout_constraintTop_toBottomOf="@+id/txt_crair_conta"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        android:hint="@string/creUser_txt_nome"
        android:ems="10"
        android:layout_marginTop="40dp"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/edTxt_cSenha"
        app:layout_constraintTop_toBottomOf="@+id/edTxt_cNome"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:hint="@string/creUser_txt_senha"
        android:ems="10"/>

    <EditText
        android:id="@+id/edTxt_cEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/txt_cEmail"
        app:layout_constraintBottom_toBottomOf="@+id/edTxt_cSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edTxt_cNome"
        tools:ignore="LabelFor" />

    <Button android:layout_height="57dp"
        android:layout_width="129dp"
        app:layout_constraintStart_toStartOf="@+id/edTxt_cSenha"
        app:layout_constraintEnd_toEndOf="@+id/edTxt_cSenha"
        android:text="@string/creUser_button_salvarUser"
        android:id="@+id/btn_salvar_usuario"
        app:layout_constraintTop_toBottomOf="@+id/edTxt_cSenha"
        android:layout_marginTop="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>